<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.VisualizarPostagemActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_perfil"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/raposinha"
                app:civ_border_color="#00000000"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_nome_usuario_postagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/nome_usuario"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_postagem"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/camera" />

        <TextView
            android:id="@+id/txt_curtidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_curtidas"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_legenda_visualizacao_publicacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legenda_publicacao"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>