<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degrade"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edtEmailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/background_caixa_texto"
        android:ems="10"
        android:hint="@string/digite_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edtSenhaLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_caixa_texto"
        android:ems="10"
        android:hint="@string/digite_senha"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/edtEmailLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailLogin"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_botao"
        android:onClick="fazerLogin"
        android:text="@string/btn_entrar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/edtSenhaLogin"
        app:layout_constraintStart_toStartOf="@+id/edtSenhaLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtSenhaLogin" />

    <TextView
        android:id="@+id/txtSemConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sem_conta"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnEntrar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnEntrar"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <ProgressBar
        android:id="@+id/progressEntrar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/txtSemConta"
        app:layout_constraintStart_toStartOf="@+id/txtSemConta"
        app:layout_constraintTop_toBottomOf="@+id/txtSemConta" />
</androidx.constraintlayout.widget.ConstraintLayout>